trunk/Archive2/9d/269367cf88e4aa/output
main.cpp:4:5: error: array initializer must be an initializer list
int b[][3] = a;
    ^
1 error generated.
