trunk/Archive2/9d/269367cf88e4aa/main.cpp
#include <iostream>

int a[][2] = {{1, 4}, {2, 6}};
int b[][3] = a;

struct A
{
    void foo() const &{ }
};

int main(){ }